# libshire

./: Cargo.toml  README.md  test.sh
src/: convert.rs  either.rs  hex.rs  lib.rs  sink.rs  strings.rs  uuid.rs
src/encoding/: hex.rs  mod.rs  rfc3986.rs  url.rs
src/strings/: capped.rs  experimental.rs  fixed.rs  fixed_string.rs  inline.rs  inlining.rs  mod.rs  shstring.rs  stack_string.rs
